<resources>
    <string name="app_name">Petto</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="dokter">Dokter</string>
    <string name="pengguna">Pengguna</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home2">Home2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_akun_saya">Akun Saya</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_keluar">Logout</string>
    <string name="title_artikel">Artikel</string>
    <string name="title_facility">Facility</string>
    <string name="title_community">Community</string>
    <string name="title_adopt_breed">Adopt &amp; Breed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>