<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_beranda" />
        <item
            android:id="@+id/nav_akun"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_akun_saya" />
        <item
            android:id="@+id/nav_artikel"
            android:icon="@drawable/ic_article"
            android:title="Artikel Saya" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_keluar" />
    </group>
</menu>